contrast fix

--- a/lesson3/css/style.css
+++ b/lesson3/css/style.css
@@ -54,7 +54,7 @@ h2 {
 	padding:0;
 }
 section {
-	background-color: #eaf6ff;
+	background-color: #f7fcff;
 	border-radius: 8px;
 	padding:10px;
 	margin:10px;
